--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,13 @@
             <option value="other">Other</option>
         </select><br>
 
-        <label for="health_condition">Health Condition:</label><br>
-        <input type="text" id="health_condition" name="health_condition" required><br>
+        <label>Health Conditions (select all that apply):</label><br>
+        <input type="checkbox" name="health_conditions" value="none"> None<br>
+        <input type="checkbox" name="health_conditions" value="diabetes"> Diabetes<br>
+        <input type="checkbox" name="health_conditions" value="hypertension"> Hypertension<br>
+        <input type="checkbox" name="health_conditions" value="osteoporosis"> Osteoporosis<br>
+        <input type="checkbox" name="health_conditions" value="pregnancy"> Pregnancy<br>
+        <input type="checkbox" name="health_conditions" value="other"> Other<br>
 
         <label for="vitamin_d_level">Vitamin D Level (optional):</label><br>
         <input type="number" id="vitamin_d_level" name="vitamin_d_level"><br>
